made the positon of the nav bar fixed at the top of the screen

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -8,6 +8,10 @@
     background-color: #191310;
     color: #f9f5f1;
     height: 100px;
+    width: 100vw;
+    position: fixed;
+    top: 0px;
+    left: 0px;
 }
 
 .Navbar .logo {
