fixed the bug, fixed the images in the background, completed the about us page except for footer which will be done as soon as it is designed, also need to add another background image for the our history section,  next work will be on the home page most probably

--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,5 @@
-body {
-    overflow-y: scroll;
+.hero-section {
+    margin-top: 100px;
 }
 
 .company-name-section {
@@ -12,6 +12,7 @@ body {
     width: 100%;
     background-image: url(../images/hero-section-bkg-img.jpg);
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .company-name-bkg-img h1 {
