--- a/src/About-us.css
+++ b/src/About-us.css
@@ -1,9 +1,9 @@
 .about-us {
+    margin-top: 100px;
     width: 100%;
     height: 700px;
     text-align: center;
     background-color: #f9f5f1;
-    overflow-y: scroll;
 }
 
 .about-us-heading-and-bkg-img {
@@ -11,6 +11,7 @@
     height: 700px;
     background-image: url(../images/about-us-sample-bkg-img.avif);
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .about-us-heading-and-bkg-img h1 {
@@ -20,13 +21,14 @@
     color: #ffb870;
 }
 
+.about-us-heading-and-bkg-img p {
+    color: #f9f5f1;
+}
+
 .vision-mission-section {
     height: 300px;
     width: 100%;
-    margin: 40px 0px;
-    border-style: solid;
-    border-color: black;
-    border-width: 2px 0px;
+    box-shadow: 0px 0px 3px #191310;
     color: #191310;
 }
 
@@ -44,3 +46,35 @@
     text-align: left;
     padding: 40px 20px;
 }
+
+.history-section {
+    height: auto;
+    width: auto;
+    margin-top: 40px;
+    text-align: left;
+}
+
+.history-section h1 {
+    font-size: 40px;
+    text-align: center;
+}
+
+.history-section div {
+    height: 300px;
+    margin: 40px;
+}
+
+.history-image {
+    display: inline-block;
+    height: 300px;
+    width: 30%;
+    background-size: cover;
+    border-radius: 40px;
+}
+
+.history-image-text {
+    width: 65%;
+    padding: 10px 20px;
+    float: right;
+}
+
