--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -16,6 +16,7 @@
 
 .Navbar .logo {
     height: 100px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -47,8 +48,4 @@
 
 .Navbar a:hover {
     color: #ffb870;
-}
-
-.Nothing {
-    margin-top: 180px;
 }
