--- a/src/Home.css
+++ b/src/Home.css
@@ -3,7 +3,7 @@
 }
 
 .company-name-section {
-    height: 700px;
+    height: 50vw;
     width: 100%;
 }
 
@@ -26,4 +26,39 @@
     text-align: right;
     margin: 110px 20px;
     padding: 110px 20px;
+}
+
+@media screen and (max-width: 1200px) and (min-width: 700px) {
+    .company-name-bkg-img {
+        height: 70vh;
+    }
+
+    .company-name-bkg-img h1 {
+        font-size: 60px;
+    }
+
+    .company-name-bkg-img p {
+        font-size: 24px;
+    }
+
+    .company-name-bkg-img h1, .company-name-bkg-img p {
+        height: 25%;
+        padding: 7vw;
+        margin: 0px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .company-name-bkg-img {
+        width: 100%;
+        height: 800px;
+    }
+
+    .company-name-bkg-img h1{
+        font-size: 40px;
+    }
+
+    .company-name-bkg-img p {
+        font-size: 25px;
+    }
 }
