--- a/src/About-Us.css
+++ b/src/About-Us.css
@@ -62,3 +62,52 @@
     border-radius: 10px; /* Rounded corners */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
 }
+.cofounders-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 2rem;
+    background-color: #f3f4f6;
+  }
+  
+  .cofounders-title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+  }
+  
+  .cofounders-cards {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+  .cofounder-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background-color: white;
+    padding: 0.5rem;
+    border-radius: 10px;
+    box-shadow: 4px 4px 10px 2px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease-in-out;
+  }
+  .cofounder-card:hover{
+    transform: translateY(-10px);
+    background: rgba(179, 178, 178, 0.2);
+  }
+  
+  .cofounder-avatar {
+    width: 25rem;
+    height: 20rem;
+    margin-bottom: 1rem;
+  }
+  
+  .cofounder-name {
+    font-size: 1.25rem;
+    font-weight: 600;
+  }
+  
+  .cofounder-role {
+    color: #4b5563;
+  }
+  
