--- a/src/Styles/About-Us.css
+++ b/src/Styles/About-Us.css
@@ -131,7 +131,7 @@
 
 .timeline-item {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   margin-bottom: 40px;
   position: relative;
 }
@@ -141,11 +141,11 @@
 }
 
 .timeline-icon {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   background-color: #3b82f6;
   color: white;
-  border-radius: 50%;
+  border-radius: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
