changed the background images

--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -15,7 +15,7 @@
   text-align: center;
   color: #191310;
   height: 70vh;
-  background-image: url('https://globalmaps.org/wp-content/uploads/2023/10/World-Map-white-2048x1171.png');
+  background-image: url('../../images/world-map.png');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
