--- a/src/Styles/Our-Services.css
+++ b/src/Styles/Our-Services.css
@@ -1,39 +1,29 @@
 .our-services-section {
-    margin-top: 100px;
+    margin: 80px 0px;
 }
 
-.our-services-bkg-img {
-    height: 30vw;
-    width: 100%;
-    background-color: gray;
-    background-attachment: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.our-services-bkg-img h2 {
+.our-services-heading {
     text-align: center;
-    font-size: 40px;
+    font-size: 33px;
 }
 
 .our-services-card-container {
     text-align: center;
-    margin: 40px 10%;
-    display: grid;
-    grid-template-columns: 30% 30% 30%;
-    row-gap: 30px;
-    column-gap: 5%;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .link-card {
-    height: 20vw;
-    box-shadow: 0px 0px 5px #191310;
-    border-radius: 8px;
-    padding: 30px 10px;
+    width: 14%;
+    height: auto;
+    color: #191310;
     text-decoration: none;
-    margin-bottom: 0px;
-    transition: transform 1s, box-shadow 1s;
+}
+
+.link-card p {
+    color: #191310;
+    transition: color 0.2s;
 }
 
 .link-card img {
@@ -46,7 +36,6 @@
     color: #191310;
 }
 
-.link-card:hover {
-    box-shadow: 2px 2px 3px #191310;
-    transform: translateY(-5px);
+.link-card:hover p {
+    color: #ffb870;
 }
