changes the background image

--- a/src/WhyUs.css
+++ b/src/WhyUs.css
@@ -17,7 +17,7 @@ body {
     text-align: center;
     width: 100%;
     height: fit-content;
-    background-image: url(../images/whyustopimg.png);
+    background-image: url(../images/why-us.jpeg);
     background-size: cover;
     background-attachment: fixed;
 }
