--- a/src/WhyUs.css
+++ b/src/WhyUs.css
@@ -35,7 +35,7 @@ body {
 .why-us-heading-and-bkg-img h1 {
   font-size: 80px;
   padding: 40px 80px;
-  color: #ffb870;
+  color: #ffaa55;
   height:70px;
   margin-bottom: 60px;
 }
@@ -66,8 +66,14 @@ body {
     text-decoration-color: #333;
     justify-content: center;
     align-items: center;
-    gap: 200px;
-    padding: 30mm 30mm;
+    gap: 10vh;
+    padding: 10px 10px;
+    width: 50%;
+    margin: 100px auto 0px auto;
+    padding: 20px 10%;
+    border-radius: 8px;
+    box-shadow: 0px 0px 20px #4747478c;
+    background: #fccfaf;
 }
   
   .trust-card {
@@ -81,33 +87,45 @@ body {
     margin-top: 20px;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 0 5px #191310;
+    padding: 20px;
+    border-radius: 8px;
+    width: 70%;
+    justify-content: center;
+    margin: 100px auto 0px auto;
+    background: #f9f5f1;
   }
   .ratings h2{
-    color:#E4E0DD;
+    color:#191310;
     font-size: 35px;
+    padding: 5vh;
   }
   .rating-bars {
     display: flex;
-    width: 20cm;
-    height:fit-content;
-    flex-direction:column-reverse;
+    /* width: 100%; */
+    height: auto;
     justify-content: center;
-    align-items: center;
-    align-self: center;
     gap: 20px;
+    margin: 100px auto 0px auto;
   }
-  
+  .rating-bar h2{
+    color: #191310;
+  }
   .rating-bar {
     background-color: #ddd;
     height:fit-content;
-    width: 300px;
+    width: 40vh;
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    padding: 0 30px;
+  }
+  .rating-bar p{
+    padding: 20px 30px;
   }
   
   .our-rating{
-    color: #E4E0DD;
+    color: #8f6032;
     font-size: 30px;
     padding: 30mm 80mm;
   }
@@ -127,8 +145,8 @@ body {
   .achievement-card {
     width: 300px;
     height: fit-content;
-    background-color: #8b4513; /* Brown color */
-    color: #E4E0DD;
+    background-color: #fccfaf; /* Brown color */
+    color: #2d221c;
     padding:10mm 10mm;
     gap:40mm;
   }
