--- a/src/Styles/WhyUs.css
+++ b/src/Styles/WhyUs.css
@@ -8,7 +8,7 @@
   text-align: center;
   width: 100%;
   height: 650px;
-  background-image: url(../images/whyustopimg.png);
+  background-image: url(../../images/why-us.png);
   background-size: cover;
   background-attachment: fixed;
 }
