--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,3 +1,11 @@
+html {
+    scroll-behavior: smooth;
+}
+
+h1, h2, h3, h4, p {
+    font-weight: lighter;
+}
+
 .hero-section {
     margin-top: 100px;
 }
