--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, p {
 }
 
 .company-name-section {
-    height: 500px;
+    height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
