--- a/src/Styles/Our-Services.css
+++ b/src/Styles/Our-Services.css
@@ -1,6 +1,4 @@
 .our-services-section {
-    margin: 80px 0px;
-    padding: 60px 0px;
     background-image: url(../images/our-services-bkg-3.jpg);
     height: 50vw;
     width: 100vw;
@@ -25,7 +23,7 @@
 }
 
 .link-card {
-    width: 14%;
+    width: 100%;
     height: 350px;
     color: #f9f5f1;
     text-decoration: none;
@@ -80,6 +78,10 @@
         flex-wrap: wrap;
     }
 
+    .our-services-card-container div {
+        text-align: center;
+    }
+
     .link-card {
         height: 70%;
         width: 33%;
@@ -97,6 +99,16 @@
 
     .our-services-card-container {
         flex-wrap: wrap;
+    }
+
+    .our-services-card-container div {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .our-services-card-container div img {
+        height: 100px;
     }
 
     .link-card {
