trying to make the images display in vercel

--- a/src/Styles/Our-Services.css
+++ b/src/Styles/Our-Services.css
@@ -1,5 +1,5 @@
 .our-services-section {
-    background-image: url(../images/our-services-bkg-3.jpg);
+    background-image: url(../../images/our-services-bkg-3.jpg);
     height: 50vw;
     width: 100vw;
     background-size: cover;
