--- a/src/Styles/About-Us.css
+++ b/src/Styles/About-Us.css
@@ -1,75 +1,124 @@
 .about-us {
-  margin-top: 100px;
+  margin-top: 75px;
   width: 100%;
-  text-align: center;
-  background-color: #f9f5f1;
+  text-align: left;
 }
 
 .about-us-heading-and-bkg-img {
-    width: 100%;
-    height: 700px;
-    background-image: url(../../images/road-aboutus.png);
-    background-size: cover;
-    background-attachment: fixed;
+  width: 100vw;
+  height: 150vh;
+}
+
+.about-us-description {
+  width: 100%;
+}
+
+.about-us-text {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .about-us-heading-and-bkg-img h1 {
-  font-size: 60px;
+  text-align: center;
+  font-size: 120px;
+  padding-bottom: 50px;
   color: #f9f5f1;
-  padding: 40px 80px;
-  color: #ffb870;
 }
 
-.about-us-heading-and-bkg-img p {
-  color: #f9f5f1;
+.about-us-img {
+  width: 100vh;
+  height: 100%;
+  background-size: cover;
+  padding-top: 100px;
+  transform: rotateX(0deg);
+}
+
+.about-us-img img {
+  width: 100vh;
 }
 
 .vision-mission-section {
-  width: 80%;
+  width: 90%;
   color: #191310;
+  padding: 10px 2%;
+  margin: 5px auto;
   display: flex;
-  justify-content: space-evenly;
-  padding: 10px 5%;
-  margin: 5px 5%;
+  justify-content: space-between;
 }
 
 .mission-section {
-  text-align: left;
+  text-align: justify;
   padding: 40px 20px;
-  background-color: white;
-  padding: 30px;
-  width: 40%;
+  background-color: #f9f5f1;
+  width: 50%;
+  display: inline-block;
   max-width: 600px;
-  text-align: center;
-  border-radius: 10px; /* Rounded corners */
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
-}
-
-.mission-section h2, .vision-section h2 {
-  font-size: 40px;
+  border-radius: 10px;
+  margin-left: 5px;
 }
 
 .vision-section {
-  text-align: center;
+  text-align: right;
   padding: 40px 20px;
-  background-color: white;
-  padding: 30px;
-  width: 40%;
+  color: #f9f5f1;
+  width: 50%;
+  display: inline-block;
   max-width: 600px;
+  border-radius: 10px;
+  margin-right: 5px;
+}
+
+.mission-section h2, .vision-section h2 {
   text-align: center;
-  border-radius: 10px; /* Rounded corners */
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
+  font-size: 70px;
+}
+
+.mission-section p {
+  color: #191310;
+  font-size: 30px;
+  line-height: 70px;
+}
+
+.vision-section p {
+  color: #f9f5f1;
+  font-size: 30px;
+  line-height: 70px;
+  text-align: justify;
+}
+
+.about-company-section {
+  width: 80vw;
+  margin: 20px auto;
+}
+
+.about-company-heading {
+  font-size: 60px;
+  text-align: center;
+  color: #f9f5f1;
+  width: 80vw;
+  padding: 20px 0;
+}
+
+.about-company-text {
+  font-size: 30px;
+  color: #f9f5f1;
+  padding: 40px 0;
+  width: 80vw;
+  text-align: justify;
+  line-height: 40px;
 }
 
 /* Main container */
 .stats-container {
-  background: #f15a29;
+  background: #ffb870;
   padding: 3rem 1rem;
   border-radius: 12px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px;
+  margin: 30px 30px 80px 30px;
 }
 
 /* Grid Layout */
@@ -104,71 +153,30 @@
 .stat-value {
   font-size: 3rem;
   font-weight: bold;
-  color: white;
+  color: #f9f5f1;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 /* Stat Label */
 .stat-label {
   font-size: 1.2rem;
-  color: white;
+  color: #f9f5f1;
   margin-top: 0.5rem;
   text-transform: uppercase;
   font-weight: 500;
   letter-spacing: 1px;
 }
 
-.cofounders-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  padding: 2rem;
-  background-color: #f3f4f6;
+.timeline-section {
+  margin-bottom: 40px;
 }
 
-.cofounders-title {
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 1.5rem;
-}
-
-.cofounders-cards {
-  display: flex;
-  justify-content: space-between;
-  margin: 0px 20px;
-}
-
-.cofounder-card {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  background-color: white;
-  padding: 0.5rem;
-  border-radius: 10px;
-  box-shadow: 4px 4px 10px 2px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease-in-out;
-}
-
-.cofounder-card:hover{
-  transform: translateY(-10px);
-  background: rgba(179, 178, 178, 0.2);
-}
-
-.cofounder-avatar {
-  width: 100%;
-  height: 20rem;
-  margin-bottom: 1rem;
-  border-radius: 10px;
-}
-
-.cofounder-name {
-  font-size: 1.25rem;
-  font-weight: 600;
-}
-
-.cofounder-role {
-  color: #4b5563;
+.timeline-section h1 {
+  text-align: center;
+  color: #f9f5f1;
+  font-size: 60px;
+  margin: 40px 0px;
+  padding: 40px 0px 20px 0px;
 }
 
 .timeline-container {
@@ -202,8 +210,8 @@
 .timeline-icon {
   width: 50px;
   height: 50px;
-  background-color: #3b82f6;
-  color: white;
+  background-color: #ffb870;
+  color: #f9f5f1;
   border-radius: 100%;
   display: flex;
   align-items: center;
@@ -215,12 +223,13 @@
 }
 
 .timeline-content {
-  background: white;
+  background: #f9f5f1;
   padding: 15px;
   border-radius: 8px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   margin-left: 50px;
   width: calc(100% - 60px);
+  font-size: 40px;
 }
 
 .timeline-content h3 {
@@ -247,7 +256,7 @@
 
 @media screen and (max-width: 1200px) {
   .about-us-heading-and-bkg-img h1 {
-      font-size: 3rem;
+      font-size: 70px;
   }
 
   .vision-mission-section {
@@ -255,7 +264,7 @@
   }
 
   .mission-section h2, .vision-section h2 {
-      font-size: 30px;
+      font-size: 50px;
   }
 
   .stat-value {
@@ -265,16 +274,37 @@
   .stat-label {
       font-size: 20px;
   }
+
+  .timeline-section {
+    margin: 20px;
+  }
 }
 
 @media screen and (max-width: 1000px) {
   .vision-mission-section {
       display: block;
+      text-align: center;
   }
 
   .vision-section, .mission-section {
-      width: 80%;
-      margin: 20px auto;
+    width: 80%;
+    margin: 20px auto;
+  }
+
+  .vision-section h2, .mission-section h2 {
+      font-size: 40px;
+  }
+
+  .about-company-section {
+    width: 80%;
+  }
+
+  .about-company-heading {
+    font-size: 40px;
+  }
+
+  .about-company-text {
+    font-size: 30px;
   }
 
   .stats-container {
@@ -299,12 +329,24 @@
     width: 100%;
     margin: 40px 0px;
   }
+
+  .timeline-section h1 {
+    font-size: 40px;
+  }
 }
 
 @media screen and (max-width: 620px) {
+  .about-us-heading-and-bkg-img {
+    height: auto;
+  }
+
   .stats-grid {
-      display: grid;
-      grid-template-columns: 100%;
-      column-gap: 0px;
+    display: grid;
+    grid-template-columns: 100%;
+    column-gap: 0px;
+  }
+
+  .mission-section p, .vision-section p {
+    line-height: 55px;
   }
 }
