--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, p {
 }
 
 .company-name-section {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -33,11 +33,12 @@ h1, h2, h3, h4, h5, p {
 
 .company-text-and-img h1 {
     font-size: 120px;
+    padding-bottom: 40px;
 }
 
 .company-text-and-img p {
     font-size: 40px;
-    margin-left: 20px;
+    margin-left: 25%;
 }
 
 @media screen and (max-width: 1200px) {
