--- a/src/Styles/WhyUs.css
+++ b/src/Styles/WhyUs.css
@@ -1,29 +1,35 @@
 #why-us {
-  margin-top: 100px;
+  margin-top: 75px;
   width: 100%;
   text-align: center;
+  color: #f9f5f1;
 }
   
 .why-us-heading-and-bkg-img {
   text-align: center;
   width: 100%;
-  height: 650px;
+  height: 105vh;
   background-image: url(../../images/why-us.png);
   background-size: cover;
   background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .why-us-heading-and-bkg-img h1 {
-  font-size: 80px;
-  padding: 40px 80px;
-  color: #ffb870;
+  padding-top: 80px;
+  text-align: center;
+  font-size: 120px;
+  padding-bottom: 50px;
+  color: #f9f5f1;
 }
 
 .icons {
   justify-content: center; /* Centers horizontally */
   align-items: center;
   text-align: center;
-  display:flex;
+  display: flex;
   flex-wrap: nowrap;
   gap: 200px;
   padding: 3cm;
@@ -50,7 +56,7 @@
 .icon-text{
   color: #f9f5f1;
   padding: 10px;
-  font-size: 20px;
+  font-size: 40px;
 }
 
 #Reliability {
@@ -58,25 +64,35 @@
 }
 
 .reliability-heading {
-  font-size: 33px;
+  font-size: 60px;
   text-align: center;
+  margin-bottom: 60px;
 }
 
 .trust-ensure {
   padding: 40px 80px;
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .trust-card {
   padding: 20px;
+  margin-bottom: 80px;
   width: 40%;
-  background-color: #f1dfce;
+  background-color: #f9f5f1;
+  color: #191310;
   border-radius: 40px;
+}
+
+.trust-card h2 {
+  font-size: 40px;
 }
 
 .trust-card p {
   text-align: justify;
+  font-size: 25px;
+  line-height: 60px;
 }
   
 #Achievements {
