--- a/src/Styles/About-Us.css
+++ b/src/Styles/About-Us.css
@@ -108,7 +108,7 @@
   padding: 40px 0;
   width: 80vw;
   text-align: justify;
-  line-height: 40px;
+  line-height: 50px;
   font-weight: lighter;
 }
 
@@ -154,7 +154,7 @@
 /* Stat Value */
 .stat-value {
   font-size: 3rem;
-  font-weight: bold;
+  font-weight: lighter;
   color: #f9f5f1;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
