--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -28,11 +28,15 @@
   padding: 20px;
   border-radius: 10px;
 }
+.text-overlay h1
+{
+  color: #f9f5f1;
+}
   /* Card styling */
   /* Country cards section */
 
 .addr h1 {
-  margin-top: 40px;
+  margin-top: 60px;
   font-size: 7vh;
   color: #191310;
   text-align: center;
