--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -30,9 +30,14 @@
   border-radius: 10px;
 }
 
+.text-overlay h1 {
+  font-size: 120px;
+  color: #f9f5f1;
+}
+
 .addr h1 {
   margin-top: 40px;
-  font-size: 7vh;
+  font-size: 50px;
   color: #f9f5f1;
   text-align: center;
 }
@@ -44,13 +49,13 @@
   max-width: 1200px;
   margin: 8vh auto;
   padding: 0 20px;
-  row-gap: 10vh;
   column-gap: 4%;
 }
 
 .country-card {
   border-radius: 10px;
   width: 40%;
+  margin-bottom: 100px;
   padding: 25px;
   text-align: center;
   position: relative;
@@ -63,12 +68,12 @@
 }
 
 .country-name {
-  color: #ffffff;
+  color: #ffb870;
   font-size: 40px;
   margin-top: 0;
   margin-bottom: 20px;
   padding-bottom: 10px;
-  border-bottom: 2px solid #e7e7e7;
+  border-bottom: 2px solid #f9f5f1;
   text-align: center;
 }
 
@@ -185,7 +190,7 @@ button:hover {
   }
   
   .country-card {
-    width: 80%;
+    width: 85%;
   }
 }
         
